ENDPOINT_CONFIG_CHANGES: fixed vertical align issue w/ columns

--- a/public/css/less/rt/components/collector-dropdown.less
+++ b/public/css/less/rt/components/collector-dropdown.less
@@ -28,6 +28,7 @@
   width: 50%;
   padding-right: 15px;
   font-size: 1rem; // fix inline-block white space
+  vertical-align: top;
   box-sizing: border-box;
 }
 
